# maya_standalone_test_example

./: .gitignore  CMakeLists.txt  readme.md
modules/: FindMaya.cmake
scripts/: launch_maya_standalone_test.bat.in
src/: CMakeLists.txt  readAndWrite.cpp
tests/: CMakeLists.txt  test_example.cpp
